:bug: hide overflow on phone

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -365,6 +365,9 @@ article h2
 //
 
 @media screen and (min-width 700px) and (max-width 1280px) and (min-height 600px) and (max-height 950px)
+    body
+        overflow hidden
+        
     article
         position absolute
         display flex
